# autopage

./: .gitignore  .gitmodules  NOTES.md  README.md  TODO.md  justfile  pyproject.toml  steam-test.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
doc/: NOTES.md  TODO.md  all-icons.txt  development.md  example-api-client.md  example-shell-autoapp.json  example-shell.ap.toml  full-run-log.md  sample-page.json  steam.md  test-json-icons.json
src/autopage/: __init__.py  api_client.py  cli.py  engine.py  json.py  keys.py  toml.py
tests/: test_autopage.py
